--- a/src/styles/TeamMember.css
+++ b/src/styles/TeamMember.css
@@ -1,85 +1,139 @@
 .team {
-    text-align: center;
-    padding: 50px 0;
-    background: url('/path-to-background-image.jpg') no-repeat center center fixed; /* Assuming you have a background image */
-    background-size: cover;
-    color: #fff;
-  }
+  text-align: center;
+  padding: 50px 0;
+  color: #fff;
+  background: black;
+  width: 100%;
+  position: relative;
+  z-index: 1;
+  padding-bottom: 10vw;
+}
+
+.team h2 {
+  font-size: 3rem;
+  margin-bottom: 50px;
+  letter-spacing: 5px;
+}
+
+.team-member {
+  display: flex;
+  align-items: center;
+  height: 200px;
+  width: 400px;
+  margin: 10px;
+  margin-bottom: 50px;
+  gap: 1rem;
+}
+
+.team-member-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  height: 100%;
+}
+
+.bw-image img {
+  width: 100%;
+  height: 100%;
+  filter: grayscale(100%);
+  transition: filter 0.3s ease;
+  object-fit: cover;
+}
+
+.team-member-details {
+  text-align: left;
+  height: 100%;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  font-family: "Anton";
+}
+
+.person-name {
+  margin-top: 40px;
+  display: flex;
+  flex-direction: column;
+}
+
+.team-member-details h3 {
+  font-size: 1.8rem;
+  margin: 0;
+  color: #fff;
+}
+
+.team-member-details p {
+  /* margin: 5px 0; */
+}
+
+.team-member-details .role {
+  font-weight: bold;
+}
+
+.team-member-details .role2 {
+  color: #8e44ad;
+  font-weight: bold;
+}
+
+.team-member-socials {
+  margin-top: 15px;
   
+}
+
+.team-member-socials a {
+  margin-right: 15px;
+  color: #fff;
+  font-size: 1rem;
+  transition: color 0.3s ease;
+}
+.team-member-socials a > svg{
+  width: 25px;
+  height: 25px;
+}
+.team-member-socials a:hover {
+  color: #777777;
+}
+
+.bw-image img:hover {
+  filter: grayscale(0%);
+}
+
+
+@media (max-width: 480px) {
+  .team {
+
+    padding: 100px 0;
+  }
+  .team-member{
+    gap: 0.1rem;
+    margin-bottom: 30px;
+  }
   .team h2 {
-    font-size: 3rem;
+    font-size: 1.8rem;
     margin-bottom: 50px;
     letter-spacing: 5px;
   }
-  
-  .team-member {
-    display: flex;
-    align-items: center;
-    margin-bottom: 50px;
-    justify-content: center;
-    /* height: 300px; */
-  }
-  
   .team-member-image {
-    margin-bottom:70px;
-    overflow: hidden;
-    height: 200px;
+    width: 50%;
+    height: 90%;
   }
-  
   .bw-image img {
-    width: 45%; /* Ensure the image takes full width of the container */
-    filter: grayscale(100%);
-    /* transition: filter 0.3s ease; */
+    width: 80%;
+    height: 80%;
   }
-  
-  
-  
   .team-member-details {
-    text-align: left;
-    max-width: 400px;
-    margin-left: -150px;
+    height: 70%;
+    width: 40%;
   }
-  
+  .person-name {
+    margin-top: 10px;
+  }
   .team-member-details h3 {
-    font-size: 1.8rem;
-    margin: 0;
-    color: #fff;
+    font-size: 1.4rem;
   }
-  
-  .team-member-details p  {
-    margin: 5px 0;
-    /* color: #b0b0b0; */
+  .team-member-socials a > svg{
+    width: 20px;
+    height: 20px;
   }
-  
-  .team-member-details .role {
-     /* Purple color for role */
-    font-weight: bold;
-  }
-
-  .team-member-details .role2 {
-    color: #8e44ad; /* Purple color for role */
-    font-weight: bold;
-  }
-
-
-  
-  .team-member-socials a {
-    margin-right: 15px;
-    color: #fff;
-    font-size: 1rem;
-    transition: color 0.3s ease;
-  }
-  
-  .team-member-socials a:hover {
-    color: #8e44ad; /* Purple color on hover */
-  }
-  
-  .bw-image img {
-    filter: grayscale(100%);
-    transition: filter 0.3s ease;
-  }
-  
-  .bw-image img:hover {
-    filter: grayscale(0%);
-  }
-  
+}
