--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,6 +12,7 @@
 @import url("./Footer.css");
 @import url("./Venue.css");
 @import url("./Sponsors.css");
+@import url("./Prize.css");
 
 * {
   box-sizing: border-box;
