--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,6 +13,7 @@
 @import url("./Venue.css");
 @import url("./Sponsors.css");
 @import url("./Prize.css");
+@import url("./Schedule.css");
 
 * {
   box-sizing: border-box;
@@ -21,10 +22,13 @@
   /* color: white; */
 }
 
+html {
+  overflow-x: hidden;
+}
+
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
   color: white;
   background-color: black;
 }
