--- a/src/styles/HeroSection.css
+++ b/src/styles/HeroSection.css
@@ -154,9 +154,9 @@
 
 .hero-section__image {
   position: absolute;
-  right: -7%;
+  right: 0;
   top: -67%;
-  width: 59%;
+  width: fit-content;
   height: 115%;
 }
 
@@ -274,7 +274,6 @@
   .hero-section__image {
     height: 50%;
     top: -30%;
-    right: -6%;
   }
 }
 
