--- a/src/styles/Schedule.css
+++ b/src/styles/Schedule.css
@@ -11,6 +11,21 @@
   gap: 1rem;
   height: 100vh;
   scroll-behavior: smooth;
+  overflow: hidden;
+}
+
+.Day {
+  font-size: 2rem;
+  font-family: "Anton";
+  color: white;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 5%;
+  transform: translateY(-50%);
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .schedule {
@@ -31,8 +46,12 @@
 
 .schedule-rocket {
   position: absolute;
+}
+
+.schedule-rocket > img {
   transform: rotate(90deg);
-  left: 20%;
+  width: 100%;
+  height: 100%;
 }
 
 .card {
@@ -54,6 +73,7 @@
 
 .card-content > h1 {
   font-size: 5rem;
+  font-weight: 400;
   text-align: center;
 }
 
@@ -84,6 +104,15 @@
 }
 
 @media screen and (max-width: 900px) {
+  .Day {
+    font-size: 1rem;
+    gap: 0.5rem;
+  }
+
+  .schedule {
+    height: 60%;
+  }
+
   .schedule-rocket {
     width: 50px;
     height: 100px;
