--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,6 +13,7 @@
 @import url("./Venue.css");
 @import url("./Sponsors.css");
 @import url("./Prize.css");
+@import url("./Schedule.css");
 
 * {
   box-sizing: border-box;
@@ -23,8 +24,6 @@
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
   color: white;
   background-color: black;
 }
