--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,6 +13,7 @@
 @import url("./Venue.css");
 @import url("./Sponsors.css");
 @import url("./Prize.css");
+@import url("./CountdownTimer.css");
 @import url("./Schedule.css");
 
 * {
