--- a/src/styles/Schedule.css
+++ b/src/styles/Schedule.css
@@ -1,5 +1,5 @@
 .schedule-section {
-  height: 300vh;
+  height: 600vh;
   position: relative;
 }
 
@@ -17,15 +17,14 @@
 .Day {
   font-size: 2rem;
   font-family: "Anton";
-  color: white;
+  color: rgb(255, 255, 255);
   text-align: center;
   position: absolute;
-  top: 50%;
-  left: 5%;
-  transform: translateY(-50%);
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
   display: flex;
   flex-direction: column;
-  gap: 1rem;
 }
 
 .schedule {
@@ -39,7 +38,7 @@
 
 .horizontal-scroll > hr {
   width: 100%;
-  border-top: 5px dashed white;
+  border-top: 3px dashed white;
   border-bottom: none;
   position: absolute;
 }
@@ -71,13 +70,45 @@
   align-items: center;
 }
 
-.card-content > h1 {
-  font-size: 5rem;
-  font-weight: 400;
-  text-align: center;
+.card-content > div:nth-child(1) {
+  padding: 0.5rem;
+  border: 3px dashed greenyellow;
+  border-radius: 100%;
+  animation: rotate 10s infinite;
+  background-color: rgba(0, 128, 0, 0.3);
 }
 
-.card-content > div {
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.card-content > div:nth-child(1) > span {
+  display: block;
+  width: 25px;
+  height: 25px;
+  border-radius: 100%;
+  background-color: greenyellow;
+  animation: pulse 3s infinite;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(0.6);
+  }
+  50% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0.6);
+  }
+}
+
+.card-content > div:nth-child(2) {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -105,32 +136,32 @@
 
 @media screen and (max-width: 900px) {
   .Day {
-    font-size: 1rem;
-    gap: 0.5rem;
-  }
-
-  .schedule {
-    height: 60%;
+    font-size: 1.5rem;
   }
 
   .schedule-rocket {
-    width: 50px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
   }
 
   .card {
     width: 200px;
   }
 
-  .card-content > h1 {
-    font-size: 3rem;
+  .card-content > div:nth-child(1) {
+    border: 2px dashed greenyellow;
   }
 
-  .card-content > div {
+  .card-content > div:nth-child(1) > span {
+    width: 15px;
+    height: 15px;
+  }
+
+  .card-content > div:nth-child(2) {
     height: 50px;
   }
 
-  .card-content > div > p {
+  .card-content > div:nth-child(2) > p {
     font-size: 0.8rem;
   }
 
