--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -163,6 +163,9 @@ a {
 .nav__toggle {
   display: none;
 }
+.goToTop {
+  display: none;
+}
 @media screen and (max-width: 900px) {
   nav {
     padding-left: 20px;
@@ -219,6 +222,25 @@ a {
   }
   #mlh-trust-badge img {
     max-width: 60px;
+  }
+  .goToTop {
+    display: block;
+    transition: smooth;
+    position: absolute;
+    right: 20px;
+    bottom: -800px;
+    background: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(0.5rem);
+    border: 1px solid #ffffff38;
+    backdrop-filter: blur(0.5rem);
+    border-radius: 40px;
+    padding: 0.5rem;
+  }
+  .goToTop img {
+    transform: rotate(180deg);
+    width: 2.1rem;
+    height: 2rem;
+    opacity: 50%;
   }
 }
 
