--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -226,15 +226,16 @@ a {
   .goToTop {
     display: block;
     transition: smooth;
-    position: absolute;
-    right: 20px;
-    bottom: -800px;
+    position: fixed;
+    right: 18px;
+    top: 50rem;
     background: rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(0.5rem);
     border: 1px solid #ffffff38;
     backdrop-filter: blur(0.5rem);
     border-radius: 40px;
     padding: 0.5rem;
+    z-index: 99;
   }
   .goToTop img {
     transform: rotate(180deg);
