enable desktop button

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -164,7 +164,25 @@ a {
   display: none;
 }
 .goToTop {
-  display: none;
+  cursor: pointer;
+  display: block;
+  transition: smooth;
+  position: fixed;
+  right: 5rem;
+  bottom: 5rem;
+  background: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(0.5rem);
+  border: 1px solid #ffffff38;
+  backdrop-filter: blur(0.5rem);
+  border-radius: 40px;
+  padding: 0.7rem;
+  z-index: 99;
+}
+.goToTop img {
+  transform: rotate(180deg);
+  width: 2.1rem;
+  height: 2rem;
+  opacity: 50%;
 }
 @media screen and (max-width: 900px) {
   nav {
@@ -228,7 +246,7 @@ a {
     transition: smooth;
     position: fixed;
     right: 18px;
-    top: 50rem;
+    bottom: 10rem;
     background: rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(0.5rem);
     border: 1px solid #ffffff38;
