--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -163,6 +163,29 @@ a {
 .nav__toggle {
   display: none;
 }
+.goToTop {
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: smooth;
+  position: fixed;
+  right: 5rem;
+  bottom: 5rem;
+  background: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(0.5rem);
+  border: 1px solid #ffffff38;
+  backdrop-filter: blur(0.5rem);
+  border-radius: 40px;
+  padding: 0.7rem;
+  z-index: 50;
+}
+.goToTop img {
+  transform: rotate(180deg);
+  width: 2.1rem;
+  height: 2rem;
+  opacity: 50%;
+}
 @media screen and (max-width: 900px) {
   nav {
     padding-left: 20px;
@@ -219,6 +242,25 @@ a {
   }
   #mlh-trust-badge img {
     max-width: 60px;
+  }
+  .goToTop {
+    transition: smooth;
+    position: fixed;
+    right: 18px;
+    bottom: 5rem;
+    background: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(0.5rem);
+    border: 1px solid #ffffff38;
+    backdrop-filter: blur(0.5rem);
+    border-radius: 40px;
+    padding: 0.5rem;
+    z-index: 99;
+  }
+  .goToTop img {
+    transform: rotate(180deg);
+    width: 2.1rem;
+    height: 2rem;
+    opacity: 50%;
   }
 }
 
