--- a/src/styles/Prize.css
+++ b/src/styles/Prize.css
@@ -87,6 +87,7 @@
   text-align: center;
   /* font-size: 1.5vw; */
   font-size: 2rem;
+  z-index: 10;
 }
 .spetial-prize {
   margin-inline: 10vw;
@@ -112,6 +113,7 @@
   font-weight: 400;
   font-family: "Anton";
   line-height: 5.546vw;
+  z-index: 1;
 }
 .prize-box {
   display: flex;
