--- a/src/styles/DisplayPage.css
+++ b/src/styles/DisplayPage.css
@@ -15,15 +15,19 @@
 }
 
 .display-page__feed {
-  flex: 2;
+  width: 65%;
 }
 
 .display-page__right {
-  flex: 1;
+  width: 35%;
+  position: absolute;
+  right: 0px;
+  top: 25px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: 95%;
 }
 
 .display-page__timer {
@@ -38,7 +42,6 @@
 
 .display-page__feed {
   display: flex;
-  width: 100%;
   gap: 20px;
   padding: 20px 0;
   position: relative;
@@ -56,7 +59,7 @@
 .carousel-track__down {
   display: flex;
   position: absolute;
-  left: 0;
+  top: 0;
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -76,4 +79,8 @@
   100% {
     transform: translateY(-100%);
   }
+}
+
+#wallsio-iframe::-webkit-scrollbar {
+  display: none;
 }
