--- a/src/styles/DisplayPage.css
+++ b/src/styles/DisplayPage.css
@@ -4,9 +4,21 @@
   height: 100vh;
 }
 
+.display-page__background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+}
+
 .display-page__logo {
   height: fit-content;
   width: fit-content;
+  padding: 0 20px;
+  z-index: 5;
+  position: relative;
 }
 
 .display-page__content {
@@ -27,12 +39,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 95%;
 }
 
 .display-page__timer {
   font-size: 7rem;
   font-family: "Anton";
+  margin-bottom: 5rem;
 }
 .display-page__timeline {
   font-size: 2rem;
