--- a/src/styles/TeamMember.css
+++ b/src/styles/TeamMember.css
@@ -70,6 +70,7 @@
   font-size: 1.8rem;
   margin: 0;
   color: #fff;
+  font-weight: 500;
 }
 
 .team-member-details p {
@@ -77,7 +78,7 @@
 }
 
 .team-member-details .role {
-  font-weight: bold;
+  font-weight: 500;
 }
 
 .team-member-details .role2 {
